TP_V2/Deployment-estadisticas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estadisticas-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: estadisticas-pod
  template:
    metadata:
      labels:
        app: estadisticas-pod
    spec:
      containers:
        - name: estadisticas
          image: ramiroalvarez2210/nginx-estadisticas
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: estadisticas-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: estadisticas-pod
