TP_V2/Deployment-main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: main-pod
  template:
    metadata:
      labels:
        app: main-pod
    spec:
      containers:
        - name: main
          image: ramiroalvarez2210/nginx-main
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: index-service
spec:
  type: NodePort
  ports:
    - port: 8081
      targetPort: 80
  selector:
    app: main-pod
