TP_V2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  rules:
  - http:
      paths:
      - path: /main
        pathType: Prefix
        backend:
          service:
            name: main-service
            port:
              number: 8080
      - path: /estadisticas
        pathType: Prefix
        backend:
          service:
            name: main-service
            port:
              number: 8080
      - path: /fastapi
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 8000
